--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,37 @@
+isc-dhcp (4.3.1-6) unstable; urgency=medium
+
+  * Fix a regression in error handling for the server's init script
+    (closes: #775834).
+    - Thanks to François-Régis Vuillemin.
+
+ -- Michael Gilbert <mgilbert@debian.org>  Fri, 13 Feb 2015 05:13:19 +0000
+
+isc-dhcp (4.3.1-5) unstable; urgency=medium
+
+  * Dynamically link against system bind libraries.
+
+ -- Michael Gilbert <mgilbert@debian.org>  Thu, 16 Oct 2014 01:28:44 +0000
+
+isc-dhcp (4.3.1-4) unstable; urgency=medium
+
+  * Bump standards to 3.9.6.
+  * Correct netmask handling in dhclient-script.linux.udeb (closes: #759761).
+  * Fix missing alias_subnet_mask in dhclient-script.linux (closes: #691091).
+
+ -- Michael Gilbert <mgilbert@debian.org>  Sun, 05 Oct 2014 22:10:15 +0000
+
+isc-dhcp (4.3.1-3) unstable; urgency=medium
+
+  * Ignore arguments passed to sourced scripts (closes: #763208).
+
+ -- Michael Gilbert <mgilbert@debian.org>  Sun, 28 Sep 2014 21:00:36 +0000
+
+isc-dhcp (4.3.1-2) unstable; urgency=medium
+
+  * Use /bin/sh instead of /bin/bash for dhclient scripts (closes: #762923).
+
+ -- Michael Gilbert <mgilbert@debian.org>  Sat, 27 Sep 2014 21:57:28 +0000
+
 isc-dhcp (4.3.1-1) unstable; urgency=medium
 
   * New upstream release.
