--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+isc-dhcp (4.3.1-6+deb8u2) jessie-security; urgency=high
+
+  * Fix CVE-2015-8605: maliciously crafted IPv4 packet can cause any of the
+    running DHCP applications (server, client, or relay) to crash.
+
+ -- Michael Gilbert <mgilbert@debian.org>  Sat, 09 Jan 2016 20:57:22 +0000
+
+isc-dhcp (4.3.1-6+deb8u1) jessie; urgency=medium
+
+  [ Michael Gilbert ]
+  * Fix error when max lease time is used on 64-bit systems (closes: #795227).
+
+ -- Bastian Blank <bastian.blank@credativ.de>  Thu, 08 Oct 2015 11:54:59 +0000
+
 isc-dhcp (4.3.1-6) unstable; urgency=medium
 
   * Fix a regression in error handling for the server's init script
