--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+isc-dhcp (4.1.1-P1-15+squeeze10) squeeze-lts; urgency=medium
+
+  * Non-maintainer upload by the Debian LTS Team (regression fix).
+  * Rebuild in a pure squeeze-lts chroot with dpkg-dev (<= 1.16.1).
+  * debian/patches:
+    + Move CVE-2015-8605.dpatch further up in the patch series. Assure that
+      the patch is applied to the LDAP _and_ non-LDAP build variants alike.
+      Thanks to Ben Hutchings for spotting this.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Mon, 18 Jan 2016 05:19:44 +0100
+
+isc-dhcp (4.1.1-P1-15+squeeze9) squeeze-lts; urgency=medium
+
+  * Non-maintainer upload by the Debian LTS Team.
+  * debian/patches:
+    + Add CVE-2015-8605.dpatch. Properly check UDP payload length
+      (CVE-2015-8605).
+    + Add drop_unused_vars_from_ldap-c.dpatch. Fix FTBFS when gcc
+      option -Werror is used.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Thu, 14 Jan 2016 10:14:47 +0100
+
 isc-dhcp (4.1.1-P1-15+squeeze8) squeeze-security; urgency=high
 
   * Non-maintainer upload.
