--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+isc-dhcp (4.3.1-6+deb8u6) jessie-security; urgency=medium
+
+  * Non-maintainer upload by the ELTS Team.
+  * CVE-2022-2928: refcount overflow.
+  * CVE-2022-2929: memory leak.
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 13 Oct 2022 19:55:57 +0200
+
 isc-dhcp (4.3.1-6+deb8u5) jessie-security; urgency=medium
 
   * Non-maintainer upload by the ELTS Team.
